<resources>
    <string name="app_name">Exercise2</string>
    <string name="person_name">\u0020\u0020\u0020\u0020\u0020Shnepelev Peter</string>
    <string name="hint">Enter a message</string>
    <string name="message">Send message</string>
    <string name="analyst">Sport analyst</string>
    <string name="telran">\u0020Colleage Tel-Ran</string>
    <string name="android">\u0020Android developer</string>
    <string name="footbal">\u0020Football analyst</string>
    <string name="disclaimer">© 2018 Shnepelev Peter</string>
    <string name="executing">You haven not suitable app for executing</string>
    <string name="describtion">Peter started his career as 1S Enterprise developer in 2011. Over time he changed field of activity to analysis and worked some years in business analysis. In 2017 began studying android development in colleage Tel-Ran.</string>
    //////////////////////////////////////////////
    <string name="menutitle">about me</string>
    <string name="descimage">image</string>
    <string name="internet">Internet connection not available</string>
    <string-array name="array_sections">
        <item>home</item>
        <item>opinion</item>
        <item>world</item>
        <item>national</item>
        <item>politics</item>
        <item>upshot</item>
        <item>nyregion</item>
        <item>business</item>
        <item>technology</item>
        <item>science</item>
        <item>health</item>
        <item>sports</item>
        <item>arts</item>
        <item>books</item>
        <item>movies</item>
        <item>theater</item>
        <item>sundayreview</item>
        <item>fashion</item>
        <item>tmagazine</item>
        <item>food</item>
        <item>travel</item>
        <item>magazine</item>
        <item>realestate</item>
        <item>automobiles</item>
        <item>obituaries</item>
        <item>insider</item>
    </string-array>
    //////////////////////////////////////////////////
    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>

    <string name="tablet">tablet</string>
    <string name="vertical">vertical</string>
    <string name="horizontal">horizontal</string>
</resources>







