<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:background="@color/colorDark"
                android:text="@string/person_name"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:textStyle="normal"

                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:adjustViewBounds="true"
                android:background="@drawable/me" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lines"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0"
                android:drawableLeft="@drawable/telran"
                android:gravity="center"
                android:text="@string/telran"
                android:textSize="@dimen/textkey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lines"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:drawableLeft="@drawable/ic_action_android"
                android:gravity="center"
                android:text="@string/android"
                android:textSize="@dimen/textkey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lines"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="9dp"
                android:layout_weight="0"
                android:drawableLeft="@drawable/ball"
                android:gravity="center"
                android:text="@string/footbal"
                android:textSize="@dimen/textkey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/describtion"
                android:textSize="@dimen/textkey" />

            <EditText
                android:id="@+id/message_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/hint"

                android:textSize="@dimen/textkey" />

            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:text="@string/message"
                android:textColor="@color/colorDarkRed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/vk_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vkicon" />

                <ImageButton
                    android:id="@+id/face_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/teleg_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/telegram" />

            </LinearLayout>
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/disclaimer"/>-->
        </LinearLayout>

    </LinearLayout>
</ScrollView>