<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.7"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/person_name"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:textStyle="normal"
                android:background="@color/colorDark"

                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:background="@drawable/me"
                android:adjustViewBounds="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="vertical"
            android:id="@+id/info_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lines"
                android:layout_marginLeft="50dp"
                android:drawableLeft="@drawable/telran"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/telran"
                android:textSize="@dimen/textkey"
                android:layout_weight="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lines"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_action_android"
                android:gravity="center"
                android:text="@string/android"
                android:textSize="@dimen/textkey"
                android:layout_weight="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lines"
                android:layout_marginLeft="50dp"
                android:drawableLeft="@drawable/ball"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="9dp"
                android:text="@string/footbal"
                android:textSize="@dimen/textkey"
                android:layout_weight="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/describtion"
                android:textSize="@dimen/textkey"
                android:layout_marginLeft="50dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textkey"
                android:hint="@string/hint"
                android:layout_marginLeft="50dp"

                android:id="@+id/message_edit"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:text="@string/message"
                android:textColor="@color/colorDarkRed"
                android:id="@+id/send_btn"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vkicon"
                    android:id="@+id/vk_btn"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/facebook"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/face_btn"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/telegram"
                    android:id="@+id/teleg_btn"/>

            </LinearLayout>
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/disclaimer"/>-->
        </LinearLayout>

    </LinearLayout>
</ScrollView>